--- a/cycpress-discovery/buger-eats/package.json
+++ b/cycpress-discovery/buger-eats/package.json
@@ -9,6 +9,7 @@
   "author": "Eron Moraes",
   "license": "MIT",
   "devDependencies": {
-    "cypress": "^12.13.0"
+    "cypress": "^12.13.0",
+    "cypress-file-upload": "^5.0.8"
   }
 }
